cmake_minimum_required(VERSION 3.12)
project(c_programming C)

add_subdirectory(1-intro-to-c)
add_subdirectory(2-arrays-and-pointers)
add_subdirectory(3-structs)
add_subdirectory(4-input-and-output)
add_subdirectory(6-forking-ipc-signals)
add_subdirectory(5-socket-programming)
add_subdirectory(7-posix-threads)
